@@ -40,6 +40,7 @@ class TestCatalogIndex(unittest.TestCase):
         index = self._getTargetClass()('foo')
         for name in [
             'applyContains',
+            'applyDoesNotContain',
             'applyEq',
             'applyNotEq',
             'applyGt',
@@ -107,6 +108,30 @@ class TestCatalogIndex(unittest.TestCase):
         self.assertEqual(index.docid, None)
         self.assertEqual(index.value, None)
         self.assertEqual(index.unindexed, 1)
+
+    def test_index_doc_missing_value_adds_to_not_indexed(self):
+        klass = self._getTargetClass()
+        class Test(klass, DummyIndex):
+            pass
+        index = Test('abc')
+        class Dummy:
+            pass
+        dummy = Dummy()
+        self.assertEqual(index.index_doc(20, dummy), None)
+        self.failUnless(20 in index.not_indexed)
+
+    def test_index_doc_with_value_removes_from_not_indexed(self):
+        klass = self._getTargetClass()
+        class Test(klass, DummyIndex):
+            pass
+        index = Test('abc')
+        index.not_indexed.add(20)
+        class Dummy:
+            pass
+        dummy = Dummy()
+        dummy.abc = 'foo'
+        self.assertEqual(index.index_doc(20, dummy), 'foo')
+        self.failIf(20 in index.not_indexed)
 
     def test_index_doc_persistent_value_raises(self):
         from persistent import Persistent
