@@ -4,6 +4,13 @@ Next release (0.8)
 - Deprecated ``.search``-based querying of catalog in favor of newer
   query language(s) via ``.query``.  See docs for more info.
 
+- Added a ``.not_indexed`` attribute to ``CatalogIndex`` which tracks the
+  documents on which ``.index_doc`` was called but for which no value was found
+  to index.  This is used by the new query language(s) to implement negations
+  of boolean operators.  This represents a backwards incompatible change to
+  ``repoze.catalog``.  XXX Need migration assistance.
+
+
 0.7.3 (2010-08-26)
 ==================
 
@@ -131,7 +138,7 @@ Backwards Incompatibilities
   able to filter the result set returned by the index.  This is used
   by the author primarily to support security-filtered searches of a
   path index.  It is not otherwise documented.
-  
+
 0.5.5 (2009-02-11)
 ==================
 
